tests/typing/pass/negative-literals.act
contract C

constructor()

creates

    int totalSupply := -1
