tests/typing/fail/untimed_entry.act
contract Fail

constructor(uint y)

creates

  uint x := y

ensures

  x >= y
